Removing more stuff from the Rails fixture

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 *.gemspec
 coverage
 pkg
-spec/fixtures/rails/log
-spec/fixtures/rails/tmp
+spec/fixtures/rails/log/*
+spec/fixtures/rails/tmp/*
 tmp
